--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Glass Twibbon - Gabungkan foto Anda dengan twibbon yang elegan menggunakan Apple Liquid Glass design" />
+    <meta name="description" content="Selamat datang di web alternatif untuk twibbon MPLS Stembayo!" />
     <meta name="theme-color" content="#1e293b" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
